# todo-fastapi

./: .env.template  pyproject.toml
app/api/v1/: auth.py
app/core/: config.py  db.py  exceptions.py  utils.py
app/models/: task.py  user.py
app/schemas/: task.py  user.py
