[tool.poetry]
name = "todo-fastapi"
version = "0.1.0"
description = ""
authors = ["Zhanibek Jumadiyev <84601413+kaidenvlr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
alembic = {extras = ["asyncio"], version = "^1.12.1"}
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
